# sandwiches-game

./: .gitignore
design/: tool_buttons.xcf
godot-project/: icon.png.import  project.godot
godot-project/gameplay/gui/: gui.gd  gui.tscn  health.png.import
godot-project/gameplay/main/: conveyor_belt.png.import  main.gd  main.tscn
godot-project/gameplay/sandwich/: sandwich.gd  sandwich.tscn
godot-project/gameplay/tool/: extinguisher.gd.uid  tool.gd  tool.gd.uid  tool.tscn  tools.png.import
godot-project/globals/fonts/: Ubuntu-B.ttf.import
godot-project/globals/singletons/: dangers_manager.gd
godot-project/globals/types/: tool_type.gd  tool_type.gd.uid
legacy/: CMakeLists.txt  Dockerfile  build_deps_ubuntu_14_04_x86_64.sh  build_deps_win32_from_ubuntu.sh  deploy.sh
legacy/include/: jdb.hpp  paths.hpp
legacy/include/dangers/: danger.hpp  danger_data.hpp  danger_data_parser.hpp  danger_info.hpp  danger_mutation.hpp  danger_state.hpp  dangers_counter.hpp  player_action.hpp  player_action_response.hpp  state_distance_transition.hpp  state_time_transition.hpp  stun_type.hpp
legacy/include/game_states/: campaign_level_selection_menu.hpp  credits_screen.hpp  end_of_campaign_screen.hpp  game_over_screen.hpp  game_state.hpp  gui_menu.hpp  level_intro.hpp  (+2 more)
legacy/src/: jdb.cpp  main.cpp
legacy/tests/: CMakeLists.txt
legacy/tests/src/: main.cpp
legacy/tests/src/dangers/: danger_data_parser.cpp  dangers_counter.cpp
legacy/tests/src/profiles/: profile.cpp  profile_json_parser.cpp
legacy/tests/src/utilities/: base_line.cpp  timer.cpp
src/: project.godot
(+122 files in other folders)
